#9 Updated NSQ* classes

--- a/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
@@ -183,7 +183,7 @@ items:
   nameWithType: NSBatchTaskInfo.GetDetailsTable()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetDetailsTable()
   type: Method
-  summary: "\nId of table with more information about the task.\n"
+  summary: "\nID of table with more information about the task.\n"
   remarks: 
   syntax: 
     content: Integer GetDetailsTable()
@@ -605,7 +605,7 @@ items:
   nameWithType: NSBatchTaskInfo.SetDetailsTable(Integer)
   fullName: CRMScript.NetServer.NSBatchTaskInfo.SetDetailsTable(Integer)
   type: Method
-  summary: "\nId of table with more information about the task.\n"
+  summary: "\nID of table with more information about the task.\n"
   remarks: 
   syntax: 
     content: Void SetDetailsTable(Integer detailsTable)
