--- a/docs/api-reference/CRMScript.NetServer.NSForeignSystemAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSForeignSystemAgent.yml
@@ -223,7 +223,7 @@ items:
   nameWithType: NSForeignSystemAgent.DeleteForeignKey(NSForeignKey,String,String,String,String,Integer)
   fullName: CRMScript.NetServer.NSForeignSystemAgent.DeleteForeignKey(NSForeignKey,String,String,String,String,Integer)
   type: Method
-  summary: "\nDeletes all specified occurrences of a key, belonging to the ForeignApp and NSForeignDevice, table and record specified. Specifying a blank table name will delete ALL keys of the given name; specifying a recordId of 0 will delete ALL keys of the given name for the given table.\n"
+  summary: "\nDeletes all specified occurrences of a key, belonging to the ForeignApp and NSForeignDevice, table and record specified. Specifying a blank table name will delete ALL keys of the given name; specifying a recordID of 0 will delete ALL keys of the given name for the given table.\n"
   remarks: 
   syntax: 
     content: Void DeleteForeignKey(NSForeignKey foreignKey, String applicationName, String deviceName, String deviceIdentifier, String tableName, Integer recordId)
@@ -260,7 +260,7 @@ items:
   nameWithType: NSForeignSystemAgent.DeleteForeignKeyOnName(String,String,String,String,String,Integer)
   fullName: CRMScript.NetServer.NSForeignSystemAgent.DeleteForeignKeyOnName(String,String,String,String,String,Integer)
   type: Method
-  summary: "\nDeletes all specified occurrences of a key, belonging to the ForeignApp and NSForeignDevice, table and record specified. Specifying a blank table name will delete ALL keys of the given name; specifying a recordId of 0 will delete ALL keys of the given name for the given table.\n"
+  summary: "\nDeletes all specified occurrences of a key, belonging to the ForeignApp and NSForeignDevice, table and record specified. Specifying a blank table name will delete ALL keys of the given name; specifying a recordID of 0 will delete ALL keys of the given name for the given table.\n"
   remarks: 
   syntax: 
     content: Void DeleteForeignKeyOnName(String applicationName, String deviceName, String deviceIdentifier, String keyName, String tableName, Integer recordId)
