--- a/docs/api-reference/CRMScript.NetServer.NSProduct.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProduct.yml
@@ -453,7 +453,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
-      description: Either a List id to an id from a connector provided list, or, if the connection doesn’t support lists, a text with the actual product category.
+      description: Either a ListId to an ID from a connector provided list, or, if the connection doesn't support lists, a text with the actual product category.
   example: 
   - "\n<pre><code>NSProduct thing;\nString productCategoryKey = thing.GetProductCategoryKey();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProduct.GetProductFamilyKey()
@@ -473,7 +473,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
-      description: Either a List id to an id from a connector provided list, or, if the connection doesn't support lists, a text with the actual product family.
+      description: Either a ListId to an ID from a connector provided list, or, if the connection doesn't support lists, a text with the actual product family.
   example: 
   - "\n<pre><code>NSProduct thing;\nString productFamilyKey = thing.GetProductFamilyKey();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProduct.GetProductId()
@@ -506,7 +506,7 @@ items:
   nameWithType: NSProduct.GetProductTypeKey()
   fullName: CRMScript.NetServer.NSProduct.GetProductTypeKey()
   type: Method
-  summary: "\nEither a List id to an id from a connector provided list, or, if the connection doesn’t support lists, a text with the actual product type.\n"
+  summary: "\nEither a ListId to an ID from a connector provided list, or, if the connection doesn't support lists, a text with the actual product type.\n"
   remarks: 
   syntax: 
     content: String GetProductTypeKey()
@@ -613,7 +613,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
-      description: Either a List id to an id from a connector provided list, or, if the connection doesn’t support lists, a text with the actual subscription unit.
+      description: Either a ListId to an ID from a connector provided list, or, if the connection doesn't support lists, a text with the actual subscription unit.
   example: 
   - "\n<pre><code>NSProduct thing;\nString subscriptionUnit = thing.GetSubscriptionUnit();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProduct.GetSupplier()
@@ -1167,7 +1167,7 @@ items:
     parameters:
     - id: productCategoryKey
       type: CRMScript.Global.String
-      description: Either a ListId to an ID from a connector provided list, or, if the connection doesn’t support lists, a text with the actual product category.
+      description: Either a ListId to an ID from a connector provided list, or, if the connection doesn't support lists, a text with the actual product category.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1233,7 +1233,7 @@ items:
     parameters:
     - id: productTypeKey
       type: CRMScript.Global.String
-      description: Either a ListId to an ID from a connector provided list, or, if the connection doesn’t support lists, a text with the actual product type.
+      description: Either a ListId to an ID from a connector provided list, or, if the connection doesn't support lists, a text with the actual product type.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1343,7 +1343,7 @@ items:
     parameters:
     - id: subscriptionUnit
       type: CRMScript.Global.String
-      description: Either a ListId to an ID from a connector provided list, or, if the connection doesn’t support lists, a text with the actual subscription unit.
+      description: Either a ListId to an ID from a connector provided list, or, if the connection doesn't support lists, a text with the actual subscription unit.
     return:
       type: CRMScript.Global.Void
   example: 
