--- a/docs/api-reference/CRMScript.NetServer.NSQuoteLineConfiguration.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteLineConfiguration.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSQuoteLineConfiguration.#ctor
   - CRMScript.NetServer.NSQuoteLineConfiguration.GetEditable()
   - CRMScript.NetServer.NSQuoteLineConfiguration.GetFieldName()
   - CRMScript.NetServer.NSQuoteLineConfiguration.GetInUse()
@@ -15,7 +16,6 @@ items:
   - CRMScript.NetServer.NSQuoteLineConfiguration.GetRank()
   - CRMScript.NetServer.NSQuoteLineConfiguration.GetRestrictEdit()
   - CRMScript.NetServer.NSQuoteLineConfiguration.GetTooltip()
-  - CRMScript.NetServer.NSQuoteLineConfiguration.#ctor
   - CRMScript.NetServer.NSQuoteLineConfiguration.SetEditable(Bool)
   - CRMScript.NetServer.NSQuoteLineConfiguration.SetFieldName(String)
   - CRMScript.NetServer.NSQuoteLineConfiguration.SetInUse(Bool)
@@ -31,186 +31,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetEditable()
-  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetEditable()
-  id: 'GetEditable()'
-  so.intellisense: NSQuoteLineConfiguration.GetEditable
-  langs:
-  - crmscript
-  name: 'GetEditable()'
-  nameWithType: NSQuoteLineConfiguration.GetEditable()
-  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetEditable()
-  type: Method
-  summary: "\nIs this a read only field?\n"
-  remarks: 
-  syntax: 
-    content: Bool GetEditable()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteLineConfiguration thing;\nBool editable = thing.GetEditable();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetFieldName()
-  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetFieldName()
-  id: 'GetFieldName()'
-  so.intellisense: NSQuoteLineConfiguration.GetFieldName
-  langs:
-  - crmscript
-  name: 'GetFieldName()'
-  nameWithType: NSQuoteLineConfiguration.GetFieldName()
-  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetFieldName()
-  type: Method
-  summary: "\nThe name of the field being configured, from data dictionary\n"
-  remarks: 
-  syntax: 
-    content: String GetFieldName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteLineConfiguration thing;\nString fieldName = thing.GetFieldName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetInUse()
-  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetInUse()
-  id: 'GetInUse()'
-  so.intellisense: NSQuoteLineConfiguration.GetInUse
-  langs:
-  - crmscript
-  name: 'GetInUse()'
-  nameWithType: NSQuoteLineConfiguration.GetInUse()
-  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetInUse()
-  type: Method
-  summary: "\nShould this field be displayed in the GUI?\n"
-  remarks: 
-  syntax: 
-    content: Bool GetInUse()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteLineConfiguration thing;\nBool inUse = thing.GetInUse();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetLabel()
-  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetLabel()
-  id: 'GetLabel()'
-  so.intellisense: NSQuoteLineConfiguration.GetLabel
-  langs:
-  - crmscript
-  name: 'GetLabel()'
-  nameWithType: NSQuoteLineConfiguration.GetLabel()
-  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetLabel()
-  type: Method
-  summary: "\nLabel resource string.\n"
-  remarks: 
-  syntax: 
-    content: String GetLabel()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteLineConfiguration thing;\nString label = thing.GetLabel();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetMandatory()
-  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetMandatory()
-  id: 'GetMandatory()'
-  so.intellisense: NSQuoteLineConfiguration.GetMandatory
-  langs:
-  - crmscript
-  name: 'GetMandatory()'
-  nameWithType: NSQuoteLineConfiguration.GetMandatory()
-  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetMandatory()
-  type: Method
-  summary: "\nIs this a mandatory field?\n"
-  remarks: 
-  syntax: 
-    content: Bool GetMandatory()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteLineConfiguration thing;\nBool mandatory = thing.GetMandatory();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetQuoteLineConfigurationId()
-  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetQuoteLineConfigurationId()
-  id: 'GetQuoteLineConfigurationId()'
-  so.intellisense: NSQuoteLineConfiguration.GetQuoteLineConfigurationId
-  langs:
-  - crmscript
-  name: 'GetQuoteLineConfigurationId()'
-  nameWithType: NSQuoteLineConfiguration.GetQuoteLineConfigurationId()
-  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetQuoteLineConfigurationId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetQuoteLineConfigurationId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteLineConfiguration thing;\nInteger quoteLineConfigurationId = thing.GetQuoteLineConfigurationId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetRank()
-  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetRank()
-  id: 'GetRank()'
-  so.intellisense: NSQuoteLineConfiguration.GetRank
-  langs:
-  - crmscript
-  name: 'GetRank()'
-  nameWithType: NSQuoteLineConfiguration.GetRank()
-  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetRank()
-  type: Method
-  summary: "\nRank of the field\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRank()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteLineConfiguration thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetRestrictEdit()
-  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetRestrictEdit()
-  id: 'GetRestrictEdit()'
-  so.intellisense: NSQuoteLineConfiguration.GetRestrictEdit
-  langs:
-  - crmscript
-  name: 'GetRestrictEdit()'
-  nameWithType: NSQuoteLineConfiguration.GetRestrictEdit()
-  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetRestrictEdit()
-  type: Method
-  summary: "\nIf true, then this field cannot be set readwrite or mandatory: It's bound to be readonly\n"
-  remarks: 
-  syntax: 
-    content: Bool GetRestrictEdit()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteLineConfiguration thing;\nBool restrictEdit = thing.GetRestrictEdit();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSQuoteLineConfiguration.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSQuoteLineConfiguration.GetTooltip()
-  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetTooltip()
-  type: Method
-  summary: "\nTooltip resource string.\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteLineConfiguration thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteLineConfiguration.#ctor
   commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.#ctor
   id: '#ctor'
@@ -226,6 +46,186 @@ items:
   syntax: 
     content: NSQuoteLineConfiguration
   example: 
+- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetEditable()
+  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetEditable()
+  id: 'GetEditable()'
+  so.intellisense: NSQuoteLineConfiguration.GetEditable
+  langs:
+  - crmscript
+  name: 'GetEditable()'
+  nameWithType: NSQuoteLineConfiguration.GetEditable()
+  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetEditable()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetEditable()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Is this a read only field?
+  example: 
+  - "\n<pre><code>NSQuoteLineConfiguration thing;\nBool editable = thing.GetEditable();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetFieldName()
+  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetFieldName()
+  id: 'GetFieldName()'
+  so.intellisense: NSQuoteLineConfiguration.GetFieldName
+  langs:
+  - crmscript
+  name: 'GetFieldName()'
+  nameWithType: NSQuoteLineConfiguration.GetFieldName()
+  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetFieldName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetFieldName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the field being configured, from data dictionary
+  example: 
+  - "\n<pre><code>NSQuoteLineConfiguration thing;\nString fieldName = thing.GetFieldName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetInUse()
+  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetInUse()
+  id: 'GetInUse()'
+  so.intellisense: NSQuoteLineConfiguration.GetInUse
+  langs:
+  - crmscript
+  name: 'GetInUse()'
+  nameWithType: NSQuoteLineConfiguration.GetInUse()
+  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetInUse()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetInUse()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Should this field be displayed in the GUI?
+  example: 
+  - "\n<pre><code>NSQuoteLineConfiguration thing;\nBool inUse = thing.GetInUse();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetLabel()
+  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetLabel()
+  id: 'GetLabel()'
+  so.intellisense: NSQuoteLineConfiguration.GetLabel
+  langs:
+  - crmscript
+  name: 'GetLabel()'
+  nameWithType: NSQuoteLineConfiguration.GetLabel()
+  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetLabel()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetLabel()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Label resource string.
+  example: 
+  - "\n<pre><code>NSQuoteLineConfiguration thing;\nString label = thing.GetLabel();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetMandatory()
+  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetMandatory()
+  id: 'GetMandatory()'
+  so.intellisense: NSQuoteLineConfiguration.GetMandatory
+  langs:
+  - crmscript
+  name: 'GetMandatory()'
+  nameWithType: NSQuoteLineConfiguration.GetMandatory()
+  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetMandatory()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetMandatory()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Is this a mandatory field?
+  example: 
+  - "\n<pre><code>NSQuoteLineConfiguration thing;\nBool mandatory = thing.GetMandatory();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetQuoteLineConfigurationId()
+  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetQuoteLineConfigurationId()
+  id: 'GetQuoteLineConfigurationId()'
+  so.intellisense: NSQuoteLineConfiguration.GetQuoteLineConfigurationId
+  langs:
+  - crmscript
+  name: 'GetQuoteLineConfigurationId()'
+  nameWithType: NSQuoteLineConfiguration.GetQuoteLineConfigurationId()
+  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetQuoteLineConfigurationId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetQuoteLineConfigurationId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSQuoteLineConfiguration thing;\nInteger quoteLineConfigurationId = thing.GetQuoteLineConfigurationId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetRank()
+  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetRank()
+  id: 'GetRank()'
+  so.intellisense: NSQuoteLineConfiguration.GetRank
+  langs:
+  - crmscript
+  name: 'GetRank()'
+  nameWithType: NSQuoteLineConfiguration.GetRank()
+  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetRank()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetRank()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Rank of the field
+  example: 
+  - "\n<pre><code>NSQuoteLineConfiguration thing;\nInteger rank = thing.GetRank();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetRestrictEdit()
+  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetRestrictEdit()
+  id: 'GetRestrictEdit()'
+  so.intellisense: NSQuoteLineConfiguration.GetRestrictEdit
+  langs:
+  - crmscript
+  name: 'GetRestrictEdit()'
+  nameWithType: NSQuoteLineConfiguration.GetRestrictEdit()
+  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetRestrictEdit()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetRestrictEdit()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: If true, then this field cannot be set readwrite or mandatory It's bound to be readonly
+  example: 
+  - "\n<pre><code>NSQuoteLineConfiguration thing;\nBool restrictEdit = thing.GetRestrictEdit();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteLineConfiguration.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSQuoteLineConfiguration.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSQuoteLineConfiguration.GetTooltip()
+  fullName: CRMScript.NetServer.NSQuoteLineConfiguration.GetTooltip()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Tooltip resource string.
+  example: 
+  - "\n<pre><code>NSQuoteLineConfiguration thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteLineConfiguration.SetEditable(Bool)
   commentId: M:CRMScript.NetServer.NSQuoteLineConfiguration.SetEditable(Bool)
   id: 'SetEditable(Bool)'
@@ -236,14 +236,14 @@ items:
   nameWithType: NSQuoteLineConfiguration.SetEditable(Bool)
   fullName: CRMScript.NetServer.NSQuoteLineConfiguration.SetEditable(Bool)
   type: Method
-  summary: "\nIs this a read only field?\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetEditable(Bool editable)
     parameters:
     - id: editable
       type: CRMScript.Global.Bool
-      description: 
+      description: Is this a read only field?
     return:
       type: CRMScript.Global.Void
   example: 
@@ -258,14 +258,14 @@ items:
   nameWithType: NSQuoteLineConfiguration.SetFieldName(String)
   fullName: CRMScript.NetServer.NSQuoteLineConfiguration.SetFieldName(String)
   type: Method
-  summary: "\nThe name of the field being configured, from data dictionary\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFieldName(String fieldName)
     parameters:
     - id: fieldName
       type: CRMScript.Global.String
-      description: 
+      description:  The name of the field being configured, from data dictionary
     return:
       type: CRMScript.Global.Void
   example: 
@@ -280,14 +280,14 @@ items:
   nameWithType: NSQuoteLineConfiguration.SetInUse(Bool)
   fullName: CRMScript.NetServer.NSQuoteLineConfiguration.SetInUse(Bool)
   type: Method
-  summary: "\nShould this field be displayed in the GUI?\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetInUse(Bool inUse)
     parameters:
     - id: inUse
       type: CRMScript.Global.Bool
-      description: 
+      description: Should this field be displayed in the GUI?
     return:
       type: CRMScript.Global.Void
   example: 
@@ -302,14 +302,14 @@ items:
   nameWithType: NSQuoteLineConfiguration.SetLabel(String)
   fullName: CRMScript.NetServer.NSQuoteLineConfiguration.SetLabel(String)
   type: Method
-  summary: "\nLabel resource string.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLabel(String label)
     parameters:
     - id: label
       type: CRMScript.Global.String
-      description: 
+      description: Label resource string.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -324,14 +324,14 @@ items:
   nameWithType: NSQuoteLineConfiguration.SetMandatory(Bool)
   fullName: CRMScript.NetServer.NSQuoteLineConfiguration.SetMandatory(Bool)
   type: Method
-  summary: "\nIs this a mandatory field?\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMandatory(Bool mandatory)
     parameters:
     - id: mandatory
       type: CRMScript.Global.Bool
-      description: 
+      description: Is this a mandatory field?
     return:
       type: CRMScript.Global.Void
   example: 
@@ -346,14 +346,14 @@ items:
   nameWithType: NSQuoteLineConfiguration.SetQuoteLineConfigurationId(Integer)
   fullName: CRMScript.NetServer.NSQuoteLineConfiguration.SetQuoteLineConfigurationId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetQuoteLineConfigurationId(Integer quoteLineConfigurationId)
     parameters:
     - id: quoteLineConfigurationId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -368,14 +368,14 @@ items:
   nameWithType: NSQuoteLineConfiguration.SetRank(Integer)
   fullName: CRMScript.NetServer.NSQuoteLineConfiguration.SetRank(Integer)
   type: Method
-  summary: "\nRank of the field\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: Rank of the field
     return:
       type: CRMScript.Global.Void
   example: 
@@ -390,14 +390,14 @@ items:
   nameWithType: NSQuoteLineConfiguration.SetRestrictEdit(Bool)
   fullName: CRMScript.NetServer.NSQuoteLineConfiguration.SetRestrictEdit(Bool)
   type: Method
-  summary: "\nIf true, then this field cannot be set readwrite or mandatory: It's bound to be readonly\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRestrictEdit(Bool restrictEdit)
     parameters:
     - id: restrictEdit
       type: CRMScript.Global.Bool
-      description: 
+      description: If true, then this field cannot be set readwrite or mandatory. It's bound to be readonly
     return:
       type: CRMScript.Global.Void
   example: 
@@ -412,14 +412,14 @@ items:
   nameWithType: NSQuoteLineConfiguration.SetTooltip(String)
   fullName: CRMScript.NetServer.NSQuoteLineConfiguration.SetTooltip(String)
   type: Method
-  summary: "\nTooltip resource string.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
     parameters:
     - id: tooltip
       type: CRMScript.Global.String
-      description: 
+      description: Tooltip resource string.
     return:
       type: CRMScript.Global.Void
   example: 
