--- a/docs/api-reference/CRMScript.NetServer.NSQuoteListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteListItem.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSQuoteListItem.#ctor
   - CRMScript.NetServer.NSQuoteListItem.GetDisplayDescription()
   - CRMScript.NetServer.NSQuoteListItem.GetDisplayValue()
   - CRMScript.NetServer.NSQuoteListItem.GetERPQuoteListItemKey()
-  - CRMScript.NetServer.NSQuoteListItem.#ctor
   - CRMScript.NetServer.NSQuoteListItem.SetDisplayDescription(String)
   - CRMScript.NetServer.NSQuoteListItem.SetDisplayValue(String)
   - CRMScript.NetServer.NSQuoteListItem.SetERPQuoteListItemKey(String)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSQuoteListItem.GetDisplayDescription()
-  commentId: M:CRMScript.NetServer.NSQuoteListItem.GetDisplayDescription()
-  id: 'GetDisplayDescription()'
-  so.intellisense: NSQuoteListItem.GetDisplayDescription
-  langs:
-  - crmscript
-  name: 'GetDisplayDescription()'
-  nameWithType: NSQuoteListItem.GetDisplayDescription()
-  fullName: CRMScript.NetServer.NSQuoteListItem.GetDisplayDescription()
-  type: Method
-  summary: "\nTypically used in a tooltip.\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayDescription()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteListItem thing;\nString displayDescription = thing.GetDisplayDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteListItem.GetDisplayValue()
-  commentId: M:CRMScript.NetServer.NSQuoteListItem.GetDisplayValue()
-  id: 'GetDisplayValue()'
-  so.intellisense: NSQuoteListItem.GetDisplayValue
-  langs:
-  - crmscript
-  name: 'GetDisplayValue()'
-  nameWithType: NSQuoteListItem.GetDisplayValue()
-  fullName: CRMScript.NetServer.NSQuoteListItem.GetDisplayValue()
-  type: Method
-  summary: "\nList item text to display.\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteListItem thing;\nString displayValue = thing.GetDisplayValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteListItem.GetERPQuoteListItemKey()
-  commentId: M:CRMScript.NetServer.NSQuoteListItem.GetERPQuoteListItemKey()
-  id: 'GetERPQuoteListItemKey()'
-  so.intellisense: NSQuoteListItem.GetERPQuoteListItemKey
-  langs:
-  - crmscript
-  name: 'GetERPQuoteListItemKey()'
-  nameWithType: NSQuoteListItem.GetERPQuoteListItemKey()
-  fullName: CRMScript.NetServer.NSQuoteListItem.GetERPQuoteListItemKey()
-  type: Method
-  summary: "\nPrimary key for the item.\n"
-  remarks: 
-  syntax: 
-    content: String GetERPQuoteListItemKey()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteListItem thing;\nString eRPQuoteListItemKey = thing.GetERPQuoteListItemKey();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteListItem.#ctor
   commentId: M:CRMScript.NetServer.NSQuoteListItem.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSQuoteListItem
   example: 
+- uid: CRMScript.NetServer.NSQuoteListItem.GetDisplayDescription()
+  commentId: M:CRMScript.NetServer.NSQuoteListItem.GetDisplayDescription()
+  id: 'GetDisplayDescription()'
+  so.intellisense: NSQuoteListItem.GetDisplayDescription
+  langs:
+  - crmscript
+  name: 'GetDisplayDescription()'
+  nameWithType: NSQuoteListItem.GetDisplayDescription()
+  fullName: CRMScript.NetServer.NSQuoteListItem.GetDisplayDescription()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDisplayDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Typically used in a tooltip.
+  example: 
+  - "\n<pre><code>NSQuoteListItem thing;\nString displayDescription = thing.GetDisplayDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteListItem.GetDisplayValue()
+  commentId: M:CRMScript.NetServer.NSQuoteListItem.GetDisplayValue()
+  id: 'GetDisplayValue()'
+  so.intellisense: NSQuoteListItem.GetDisplayValue
+  langs:
+  - crmscript
+  name: 'GetDisplayValue()'
+  nameWithType: NSQuoteListItem.GetDisplayValue()
+  fullName: CRMScript.NetServer.NSQuoteListItem.GetDisplayValue()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDisplayValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: List item text to display.
+  example: 
+  - "\n<pre><code>NSQuoteListItem thing;\nString displayValue = thing.GetDisplayValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteListItem.GetERPQuoteListItemKey()
+  commentId: M:CRMScript.NetServer.NSQuoteListItem.GetERPQuoteListItemKey()
+  id: 'GetERPQuoteListItemKey()'
+  so.intellisense: NSQuoteListItem.GetERPQuoteListItemKey
+  langs:
+  - crmscript
+  name: 'GetERPQuoteListItemKey()'
+  nameWithType: NSQuoteListItem.GetERPQuoteListItemKey()
+  fullName: CRMScript.NetServer.NSQuoteListItem.GetERPQuoteListItemKey()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetERPQuoteListItemKey()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Primary key for the item.
+  example: 
+  - "\n<pre><code>NSQuoteListItem thing;\nString eRPQuoteListItemKey = thing.GetERPQuoteListItemKey();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteListItem.SetDisplayDescription(String)
   commentId: M:CRMScript.NetServer.NSQuoteListItem.SetDisplayDescription(String)
   id: 'SetDisplayDescription(String)'
@@ -104,14 +104,14 @@ items:
   nameWithType: NSQuoteListItem.SetDisplayDescription(String)
   fullName: CRMScript.NetServer.NSQuoteListItem.SetDisplayDescription(String)
   type: Method
-  summary: "\nTypically used in a tooltip.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDisplayDescription(String displayDescription)
     parameters:
     - id: displayDescription
       type: CRMScript.Global.String
-      description: 
+      description:  Typically used in a tooltip.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -126,14 +126,14 @@ items:
   nameWithType: NSQuoteListItem.SetDisplayValue(String)
   fullName: CRMScript.NetServer.NSQuoteListItem.SetDisplayValue(String)
   type: Method
-  summary: "\nList item text to display.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDisplayValue(String displayValue)
     parameters:
     - id: displayValue
       type: CRMScript.Global.String
-      description: 
+      description: List item text to display.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -148,14 +148,14 @@ items:
   nameWithType: NSQuoteListItem.SetERPQuoteListItemKey(String)
   fullName: CRMScript.NetServer.NSQuoteListItem.SetERPQuoteListItemKey(String)
   type: Method
-  summary: "\nPrimary key for the item.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetERPQuoteListItemKey(String eRPQuoteListItemKey)
     parameters:
     - id: eRPQuoteListItemKey
       type: CRMScript.Global.String
-      description: 
+      description:  Primary key for the item.
     return:
       type: CRMScript.Global.Void
   example: 
