--- a/docs/api-reference/CRMScript.NetServer.NSQuoteVersionAttachment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteVersionAttachment.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSQuoteVersionAttachment.#ctor
   - CRMScript.NetServer.NSQuoteVersionAttachment.GetDocumentId()
   - CRMScript.NetServer.NSQuoteVersionAttachment.GetIncluded()
-  - CRMScript.NetServer.NSQuoteVersionAttachment.#ctor
   - CRMScript.NetServer.NSQuoteVersionAttachment.SetDocumentId(Integer)
   - CRMScript.NetServer.NSQuoteVersionAttachment.SetIncluded(Bool)
   name: NSQuoteVersionAttachment
@@ -17,46 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSQuoteVersionAttachment.GetDocumentId()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionAttachment.GetDocumentId()
-  id: 'GetDocumentId()'
-  so.intellisense: NSQuoteVersionAttachment.GetDocumentId
-  langs:
-  - crmscript
-  name: 'GetDocumentId()'
-  nameWithType: NSQuoteVersionAttachment.GetDocumentId()
-  fullName: CRMScript.NetServer.NSQuoteVersionAttachment.GetDocumentId()
-  type: Method
-  summary: "\nLink to document\n"
-  remarks: 
-  syntax: 
-    content: Integer GetDocumentId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteVersionAttachment thing;\nInteger documentId = thing.GetDocumentId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionAttachment.GetIncluded()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionAttachment.GetIncluded()
-  id: 'GetIncluded()'
-  so.intellisense: NSQuoteVersionAttachment.GetIncluded
-  langs:
-  - crmscript
-  name: 'GetIncluded()'
-  nameWithType: NSQuoteVersionAttachment.GetIncluded()
-  fullName: CRMScript.NetServer.NSQuoteVersionAttachment.GetIncluded()
-  type: Method
-  summary: "\nWill this attachment be included in the next 'Send Quote' operation\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIncluded()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteVersionAttachment thing;\nBool included = thing.GetIncluded();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersionAttachment.#ctor
   commentId: M:CRMScript.NetServer.NSQuoteVersionAttachment.#ctor
   id: '#ctor'
@@ -72,6 +32,46 @@ items:
   syntax: 
     content: NSQuoteVersionAttachment
   example: 
+- uid: CRMScript.NetServer.NSQuoteVersionAttachment.GetDocumentId()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionAttachment.GetDocumentId()
+  id: 'GetDocumentId()'
+  so.intellisense: NSQuoteVersionAttachment.GetDocumentId
+  langs:
+  - crmscript
+  name: 'GetDocumentId()'
+  nameWithType: NSQuoteVersionAttachment.GetDocumentId()
+  fullName: CRMScript.NetServer.NSQuoteVersionAttachment.GetDocumentId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetDocumentId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Link to document
+  example: 
+  - "\n<pre><code>NSQuoteVersionAttachment thing;\nInteger documentId = thing.GetDocumentId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteVersionAttachment.GetIncluded()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionAttachment.GetIncluded()
+  id: 'GetIncluded()'
+  so.intellisense: NSQuoteVersionAttachment.GetIncluded
+  langs:
+  - crmscript
+  name: 'GetIncluded()'
+  nameWithType: NSQuoteVersionAttachment.GetIncluded()
+  fullName: CRMScript.NetServer.NSQuoteVersionAttachment.GetIncluded()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetIncluded()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Will this attachment be included in the next 'Send Quote' operation
+  example: 
+  - "\n<pre><code>NSQuoteVersionAttachment thing;\nBool included = thing.GetIncluded();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersionAttachment.SetDocumentId(Integer)
   commentId: M:CRMScript.NetServer.NSQuoteVersionAttachment.SetDocumentId(Integer)
   id: 'SetDocumentId(Integer)'
@@ -82,14 +82,14 @@ items:
   nameWithType: NSQuoteVersionAttachment.SetDocumentId(Integer)
   fullName: CRMScript.NetServer.NSQuoteVersionAttachment.SetDocumentId(Integer)
   type: Method
-  summary: "\nLink to document\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDocumentId(Integer documentId)
     parameters:
     - id: documentId
       type: CRMScript.Global.Integer
-      description: 
+      description: Link to document
     return:
       type: CRMScript.Global.Void
   example: 
@@ -104,14 +104,14 @@ items:
   nameWithType: NSQuoteVersionAttachment.SetIncluded(Bool)
   fullName: CRMScript.NetServer.NSQuoteVersionAttachment.SetIncluded(Bool)
   type: Method
-  summary: "\nWill this attachment be included in the next 'Send Quote' operation\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIncluded(Bool included)
     parameters:
     - id: included
       type: CRMScript.Global.Bool
-      description: 
+      description: Will this attachment be included in the next 'Send Quote' operation
     return:
       type: CRMScript.Global.Void
   example: 
