--- a/docs/api-reference/CRMScript.NetServer.NSQuoteVersionStatusInformation.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteVersionStatusInformation.yml
@@ -6,11 +6,11 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSQuoteVersionStatusInformation.#ctor
   - CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayMessage()
   - CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayTooltip()
   - CRMScript.NetServer.NSQuoteVersionStatusInformation.GetIconHint()
   - CRMScript.NetServer.NSQuoteVersionStatusInformation.GetStatus()
-  - CRMScript.NetServer.NSQuoteVersionStatusInformation.#ctor
   - CRMScript.NetServer.NSQuoteVersionStatusInformation.SetDisplayMessage(String)
   - CRMScript.NetServer.NSQuoteVersionStatusInformation.SetDisplayTooltip(String)
   - CRMScript.NetServer.NSQuoteVersionStatusInformation.SetIconHint(String)
@@ -21,86 +21,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayMessage()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayMessage()
-  id: 'GetDisplayMessage()'
-  so.intellisense: NSQuoteVersionStatusInformation.GetDisplayMessage
-  langs:
-  - crmscript
-  name: 'GetDisplayMessage()'
-  nameWithType: NSQuoteVersionStatusInformation.GetDisplayMessage()
-  fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayMessage()
-  type: Method
-  summary: "\nGenerated error message for the Quote Version. Will check for errors on quote lines, alternatives and the version itself.\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayMessage()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteVersionStatusInformation thing;\nString displayMessage = thing.GetDisplayMessage();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayTooltip()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayTooltip()
-  id: 'GetDisplayTooltip()'
-  so.intellisense: NSQuoteVersionStatusInformation.GetDisplayTooltip
-  langs:
-  - crmscript
-  name: 'GetDisplayTooltip()'
-  nameWithType: NSQuoteVersionStatusInformation.GetDisplayTooltip()
-  fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayTooltip()
-  type: Method
-  summary: "\nGenerated full tooltip for the Quote Version. Will check for errors on quote lines, alternatives and the version itself.\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteVersionStatusInformation thing;\nString displayTooltip = thing.GetDisplayTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetIconHint()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionStatusInformation.GetIconHint()
-  id: 'GetIconHint()'
-  so.intellisense: NSQuoteVersionStatusInformation.GetIconHint
-  langs:
-  - crmscript
-  name: 'GetIconHint()'
-  nameWithType: NSQuoteVersionStatusInformation.GetIconHint()
-  fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetIconHint()
-  type: Method
-  summary: "\nIcon hint for the associated message.\n"
-  remarks: 
-  syntax: 
-    content: String GetIconHint()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteVersionStatusInformation thing;\nString iconHint = thing.GetIconHint();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetStatus()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionStatusInformation.GetStatus()
-  id: 'GetStatus()'
-  so.intellisense: NSQuoteVersionStatusInformation.GetStatus
-  langs:
-  - crmscript
-  name: 'GetStatus()'
-  nameWithType: NSQuoteVersionStatusInformation.GetStatus()
-  fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetStatus()
-  type: Method
-  summary: "\nStatus information for the quote version.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<ul><li>Enum: 0 = Ok</li><li>Enum: 1 = OkWithInfo</li><li>Enum: 2 = Warning</li><li>Enum: 3 = Error</li></ul><pre><code>NSQuoteVersionStatusInformation thing;\nInteger status = thing.GetStatus();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetStatus()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteVersionStatusInformation thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersionStatusInformation.#ctor
   commentId: M:CRMScript.NetServer.NSQuoteVersionStatusInformation.#ctor
   id: '#ctor'
@@ -116,6 +36,86 @@ items:
   syntax: 
     content: NSQuoteVersionStatusInformation
   example: 
+- uid: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayMessage()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayMessage()
+  id: 'GetDisplayMessage()'
+  so.intellisense: NSQuoteVersionStatusInformation.GetDisplayMessage
+  langs:
+  - crmscript
+  name: 'GetDisplayMessage()'
+  nameWithType: NSQuoteVersionStatusInformation.GetDisplayMessage()
+  fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayMessage()
+  type: Method
+  summary: "\nChecks for errors on quote lines, alternatives and the version itself.\n"
+  remarks: 
+  syntax: 
+    content: String GetDisplayMessage()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Generated error message for the Quote Version.
+  example: 
+  - "\n<pre><code>NSQuoteVersionStatusInformation thing;\nString displayMessage = thing.GetDisplayMessage();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayTooltip()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayTooltip()
+  id: 'GetDisplayTooltip()'
+  so.intellisense: NSQuoteVersionStatusInformation.GetDisplayTooltip
+  langs:
+  - crmscript
+  name: 'GetDisplayTooltip()'
+  nameWithType: NSQuoteVersionStatusInformation.GetDisplayTooltip()
+  fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetDisplayTooltip()
+  type: Method
+  summary: "\nChecks for errors on quote lines, alternatives and the version itself.\n"
+  remarks: 
+  syntax: 
+    content: String GetDisplayTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Generated full tooltip for the Quote Version.
+  example: 
+  - "\n<pre><code>NSQuoteVersionStatusInformation thing;\nString displayTooltip = thing.GetDisplayTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetIconHint()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionStatusInformation.GetIconHint()
+  id: 'GetIconHint()'
+  so.intellisense: NSQuoteVersionStatusInformation.GetIconHint
+  langs:
+  - crmscript
+  name: 'GetIconHint()'
+  nameWithType: NSQuoteVersionStatusInformation.GetIconHint()
+  fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetIconHint()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetIconHint()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Icon hint for the associated message.
+  example: 
+  - "\n<pre><code>NSQuoteVersionStatusInformation thing;\nString iconHint = thing.GetIconHint();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetStatus()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionStatusInformation.GetStatus()
+  id: 'GetStatus()'
+  so.intellisense: NSQuoteVersionStatusInformation.GetStatus
+  langs:
+  - crmscript
+  name: 'GetStatus()'
+  nameWithType: NSQuoteVersionStatusInformation.GetStatus()
+  fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetStatus()
+  type: Method
+  summary: "\n<ul><li>Enum: 0 = Ok</li><li>Enum: 1 = OkWithInfo</li><li>Enum: 2 = Warning</li><li>Enum: 3 = Error</li></ul>\n"
+  remarks: 
+  syntax: 
+    content: Integer GetStatus()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Status information for the quote version.
+  example: 
+  - "\n<pre><code>NSQuoteVersionStatusInformation thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersionStatusInformation.SetDisplayMessage(String)
   commentId: M:CRMScript.NetServer.NSQuoteVersionStatusInformation.SetDisplayMessage(String)
   id: 'SetDisplayMessage(String)'
@@ -126,14 +126,14 @@ items:
   nameWithType: NSQuoteVersionStatusInformation.SetDisplayMessage(String)
   fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.SetDisplayMessage(String)
   type: Method
-  summary: "\nGenerated error message for the Quote Version. Will check for errors on quote lines, alternatives and the version itself.\n"
+  summary: "\nChecks for errors on quote lines, alternatives and the version itself.\n"
   remarks: 
   syntax: 
     content: Void SetDisplayMessage(String displayMessage)
     parameters:
     - id: displayMessage
       type: CRMScript.Global.String
-      description: 
+      description: Generated error message for the Quote Version.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -148,14 +148,14 @@ items:
   nameWithType: NSQuoteVersionStatusInformation.SetDisplayTooltip(String)
   fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.SetDisplayTooltip(String)
   type: Method
-  summary: "\nGenerated full tooltip for the Quote Version. Will check for errors on quote lines, alternatives and the version itself.\n"
+  summary: "\nChecks for errors on quote lines, alternatives and the version itself.\n"
   remarks: 
   syntax: 
     content: Void SetDisplayTooltip(String displayTooltip)
     parameters:
     - id: displayTooltip
       type: CRMScript.Global.String
-      description: 
+      description: Generated full tooltip for the Quote Version.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -170,14 +170,14 @@ items:
   nameWithType: NSQuoteVersionStatusInformation.SetIconHint(String)
   fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.SetIconHint(String)
   type: Method
-  summary: "\nIcon hint for the associated message.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIconHint(String iconHint)
     parameters:
     - id: iconHint
       type: CRMScript.Global.String
-      description: 
+      description: Icon hint for the associated message.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -192,14 +192,14 @@ items:
   nameWithType: NSQuoteVersionStatusInformation.SetStatus(Integer)
   fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.SetStatus(Integer)
   type: Method
-  summary: "\nStatus information for the quote version.\n"
-  remarks: "\n<p>See enum status.</p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetStatus(Integer status)
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: 
+      description: Status information for the quote version. See enum status.
     return:
       type: CRMScript.Global.Void
   example: 
