--- a/docs/api-reference/CRMScript.NetServer.NSQuoteVersionWorkflowState.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteVersionWorkflowState.yml
@@ -6,97 +6,21 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSQuoteVersionWorkflowState.#ctor
   - CRMScript.NetServer.NSQuoteVersionWorkflowState.GetActionButtons()
   - CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStateImage()
   - CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStatus()
   - CRMScript.NetServer.NSQuoteVersionWorkflowState.GetUpdatePricesButton()
-  - CRMScript.NetServer.NSQuoteVersionWorkflowState.#ctor
-  - CRMScript.NetServer.NSQuoteVersionWorkflowState.SetActionButtons()
-  - CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStateImage()
-  - CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStatus()
-  - CRMScript.NetServer.NSQuoteVersionWorkflowState.SetUpdatePricesButton()
+  - CRMScript.NetServer.NSQuoteVersionWorkflowState.SetActionButtons(NSQuoteVersionButtonState[])
+  - CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStateImage(NSQuoteVersionButtonState)
+  - CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStatus(NSQuoteVersionStatusInformation)
+  - CRMScript.NetServer.NSQuoteVersionWorkflowState.SetUpdatePricesButton(NSQuoteVersionButtonState)
   name: NSQuoteVersionWorkflowState
   nameWithType: NSQuoteVersionWorkflowState
   fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetActionButtons()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.GetActionButtons()
-  id: 'GetActionButtons()'
-  so.intellisense: NSQuoteVersionWorkflowState.GetActionButtons
-  langs:
-  - crmscript
-  name: 'GetActionButtons()'
-  nameWithType: NSQuoteVersionWorkflowState.GetActionButtons()
-  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetActionButtons()
-  type: Method
-  summary: "\nArray of visible buttons with defined actions in the quote verson dialog.<p></p>\n<strong>Returns:</strong>NSQuoteVersionButtonState[]<p></p>\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionButtonState[] actionButtons = thing.GetActionButtons();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSQuoteVersionButtonState[] GetActionButtons()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSQuoteVersionButtonState[]
-  example: 
-  - "\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionButtonState[] actionButtons = thing.GetActionButtons();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStateImage()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStateImage()
-  id: 'GetStateImage()'
-  so.intellisense: NSQuoteVersionWorkflowState.GetStateImage
-  langs:
-  - crmscript
-  name: 'GetStateImage()'
-  nameWithType: NSQuoteVersionWorkflowState.GetStateImage()
-  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStateImage()
-  type: Method
-  summary: "\nInformation about the state image for the current quote version.\n"
-  remarks: 
-  syntax: 
-    content: NSQuoteVersionButtonState GetStateImage()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSQuoteVersionButtonState
-  example: 
-  - "\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionButtonState stateImage = thing.GetStateImage();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStatus()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStatus()
-  id: 'GetStatus()'
-  so.intellisense: NSQuoteVersionWorkflowState.GetStatus
-  langs:
-  - crmscript
-  name: 'GetStatus()'
-  nameWithType: NSQuoteVersionWorkflowState.GetStatus()
-  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStatus()
-  type: Method
-  summary: "\nStatus information for the Quote Version.\n"
-  remarks: 
-  syntax: 
-    content: NSQuoteVersionStatusInformation GetStatus()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSQuoteVersionStatusInformation
-  example: 
-  - "\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionStatusInformation status = thing.GetStatus();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetUpdatePricesButton()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.GetUpdatePricesButton()
-  id: 'GetUpdatePricesButton()'
-  so.intellisense: NSQuoteVersionWorkflowState.GetUpdatePricesButton
-  langs:
-  - crmscript
-  name: 'GetUpdatePricesButton()'
-  nameWithType: NSQuoteVersionWorkflowState.GetUpdatePricesButton()
-  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetUpdatePricesButton()
-  type: Method
-  summary: "\nInformation about the action for the update prices button.\n"
-  remarks: 
-  syntax: 
-    content: NSQuoteVersionButtonState GetUpdatePricesButton()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSQuoteVersionButtonState
-  example: 
-  - "\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionButtonState updatePricesButton = thing.GetUpdatePricesButton();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.#ctor
   commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.#ctor
   id: '#ctor'
@@ -112,72 +36,172 @@ items:
   syntax: 
     content: NSQuoteVersionWorkflowState
   example: 
-- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetActionButtons()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.SetActionButtons()
-  id: 'SetActionButtons()'
+- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetActionButtons()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.GetActionButtons()
+  id: 'GetActionButtons()'
+  so.intellisense: NSQuoteVersionWorkflowState.GetActionButtons
+  langs:
+  - crmscript
+  name: 'GetActionButtons()'
+  nameWithType: NSQuoteVersionWorkflowState.GetActionButtons()
+  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetActionButtons()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSQuoteVersionButtonState[] GetActionButtons()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSQuoteVersionButtonState[]
+      description: Array of visible buttons with defined actions in the quote version dialog.
+  example: 
+  - "\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionButtonState[] actionButtons = thing.GetActionButtons();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStateImage()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStateImage()
+  id: 'GetStateImage()'
+  so.intellisense: NSQuoteVersionWorkflowState.GetStateImage
+  langs:
+  - crmscript
+  name: 'GetStateImage()'
+  nameWithType: NSQuoteVersionWorkflowState.GetStateImage()
+  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStateImage()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSQuoteVersionButtonState GetStateImage()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSQuoteVersionButtonState
+      description: Information about the state image for the current quote version.
+  example: 
+  - "\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionButtonState stateImage = thing.GetStateImage();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStatus()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStatus()
+  id: 'GetStatus()'
+  so.intellisense: NSQuoteVersionWorkflowState.GetStatus
+  langs:
+  - crmscript
+  name: 'GetStatus()'
+  nameWithType: NSQuoteVersionWorkflowState.GetStatus()
+  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetStatus()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSQuoteVersionStatusInformation GetStatus()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSQuoteVersionStatusInformation
+      description: Status information for the Quote Version.
+  example: 
+  - "\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionStatusInformation status = thing.GetStatus();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetUpdatePricesButton()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.GetUpdatePricesButton()
+  id: 'GetUpdatePricesButton()'
+  so.intellisense: NSQuoteVersionWorkflowState.GetUpdatePricesButton
+  langs:
+  - crmscript
+  name: 'GetUpdatePricesButton()'
+  nameWithType: NSQuoteVersionWorkflowState.GetUpdatePricesButton()
+  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.GetUpdatePricesButton()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSQuoteVersionButtonState GetUpdatePricesButton()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSQuoteVersionButtonState
+      description: Information about the action for the update prices button.
+  example: 
+  - "\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionButtonState updatePricesButton = thing.GetUpdatePricesButton();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetActionButtons(NSQuoteVersionButtonState[])
+  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.SetActionButtons(NSQuoteVersionButtonState[])
+  id: 'SetActionButtons(NSQuoteVersionButtonState[])'
   so.intellisense: NSQuoteVersionWorkflowState.SetActionButtons
   langs:
   - crmscript
-  name: 'SetActionButtons()'
-  nameWithType: NSQuoteVersionWorkflowState.SetActionButtons()
-  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetActionButtons()
+  name: 'SetActionButtons(NSQuoteVersionButtonState[])'
+  nameWithType: NSQuoteVersionWorkflowState.SetActionButtons(NSQuoteVersionButtonState[])
+  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetActionButtons(NSQuoteVersionButtonState[])
   type: Method
-  summary: "\nArray of visible buttons with defined actions in the quote verson dialog.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetActionButtons(NSQuoteVersionButtonState[] actionButtons)
     parameters:
+    - id: actionButtons
+      type: CRMScript.NetServer.NSQuoteVersionButtonState[]
+      description: Array of visible buttons with defined actions in the quote version dialog.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionButtonState[] actionButtons;\nthing.SetActionButtons(actionButtons);</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStateImage()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStateImage()
-  id: 'SetStateImage()'
+- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStateImage(NSQuoteVersionButtonState)
+  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStateImage(NSQuoteVersionButtonState)
+  id: 'SetStateImage(NSQuoteVersionButtonState)'
   so.intellisense: NSQuoteVersionWorkflowState.SetStateImage
   langs:
   - crmscript
-  name: 'SetStateImage()'
-  nameWithType: NSQuoteVersionWorkflowState.SetStateImage()
-  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStateImage()
+  name: 'SetStateImage(NSQuoteVersionButtonState)'
+  nameWithType: NSQuoteVersionWorkflowState.SetStateImage(NSQuoteVersionButtonState)
+  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStateImage(NSQuoteVersionButtonState)
   type: Method
-  summary: "\nInformation about the state image for the current quote version.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetStateImage(NSQuoteVersionButtonState stateImage)
     parameters:
+    - id: stateImage
+      type: CRMScript.NetServer.NSQuoteVersionButtonState
+      description: Information about the state image for the current quote version.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionButtonState stateImage;\nthing.SetStateImage(stateImage);</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStatus()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStatus()
-  id: 'SetStatus()'
+- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStatus(NSQuoteVersionStatusInformation)
+  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStatus(NSQuoteVersionStatusInformation)
+  id: 'SetStatus(NSQuoteVersionStatusInformation)'
   so.intellisense: NSQuoteVersionWorkflowState.SetStatus
   langs:
   - crmscript
-  name: 'SetStatus()'
-  nameWithType: NSQuoteVersionWorkflowState.SetStatus()
-  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStatus()
+  name: 'SetStatus(NSQuoteVersionStatusInformation)'
+  nameWithType: NSQuoteVersionWorkflowState.SetStatus(NSQuoteVersionStatusInformation)
+  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetStatus(NSQuoteVersionStatusInformation)
   type: Method
-  summary: "\nStatus information for the Quote Version.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetStatus(NSQuoteVersionStatusInformation status)
     parameters:
+    - id: status
+      type: CRMScript.NetServer.NSQuoteVersionStatusInformation
+      description: Status information for the Quote Version.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionStatusInformation status;\nthing.SetStatus(status);</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetUpdatePricesButton()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.SetUpdatePricesButton()
-  id: 'SetUpdatePricesButton()'
+- uid: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetUpdatePricesButton(NSQuoteVersionButtonState)
+  commentId: M:CRMScript.NetServer.NSQuoteVersionWorkflowState.SetUpdatePricesButton(NSQuoteVersionButtonState)
+  id: 'SetUpdatePricesButton(NSQuoteVersionButtonState)'
   so.intellisense: NSQuoteVersionWorkflowState.SetUpdatePricesButton
   langs:
   - crmscript
-  name: 'SetUpdatePricesButton()'
-  nameWithType: NSQuoteVersionWorkflowState.SetUpdatePricesButton()
-  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetUpdatePricesButton()
+  name: 'SetUpdatePricesButton(NSQuoteVersionButtonState)'
+  nameWithType: NSQuoteVersionWorkflowState.SetUpdatePricesButton(NSQuoteVersionButtonState)
+  fullName: CRMScript.NetServer.NSQuoteVersionWorkflowState.SetUpdatePricesButton(NSQuoteVersionButtonState)
   type: Method
-  summary: "\nInformation about the action for the update prices button.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdatePricesButton(NSQuoteVersionButtonState updatePricesButton)
     parameters:
+    - id: updatePricesButton
+      type: CRMScript.NetServer.NSQuoteVersionButtonState
+      description: Information about the action for the update prices button.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSQuoteVersionWorkflowState thing;\nNSQuoteVersionButtonState updatePricesButton;\nthing.SetUpdatePricesButton(updatePricesButton);</code></pre>\n"
 references:
