--- a/docs/api-reference/CRMScript.NetServer.NSStatusMonitor.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStatusMonitor.yml
@@ -273,7 +273,7 @@ items:
   nameWithType: NSStatusMonitor.GetOwnerTable()
   fullName: CRMScript.NetServer.NSStatusMonitor.GetOwnerTable()
   type: Method
-  summary: "\nId of table that owns the status monitor\n"
+  summary: "\nID of table that owns the status monitor\n"
   remarks: 
   syntax: 
     content: Integer GetOwnerTable()
@@ -293,7 +293,7 @@ items:
   nameWithType: NSStatusMonitor.GetPictureId()
   fullName: CRMScript.NetServer.NSStatusMonitor.GetPictureId()
   type: Method
-  summary: "\nId of BinaryObject row that contains image for status monitor\n"
+  summary: "\nID of BinaryObject row that contains image for status monitor\n"
   remarks: 
   syntax: 
     content: Integer GetPictureId()
@@ -600,7 +600,7 @@ items:
   nameWithType: NSStatusMonitor.SetOwnerTable(Integer)
   fullName: CRMScript.NetServer.NSStatusMonitor.SetOwnerTable(Integer)
   type: Method
-  summary: "\nId of table that owns the status monitor\n"
+  summary: "\nID of table that owns the status monitor\n"
   remarks: 
   syntax: 
     content: Void SetOwnerTable(Integer ownerTable)
@@ -622,7 +622,7 @@ items:
   nameWithType: NSStatusMonitor.SetPictureId(Integer)
   fullName: CRMScript.NetServer.NSStatusMonitor.SetPictureId(Integer)
   type: Method
-  summary: "\nId of BinaryObject row that contains image for status monitor\n"
+  summary: "\nID of BinaryObject row that contains image for status monitor\n"
   remarks: 
   syntax: 
     content: Void SetPictureId(Integer pictureId)
