--- a/docs/api-reference/CRMScript.NetServer.NSTicketMessageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketMessageEntity.yml
@@ -244,7 +244,7 @@ items:
   nameWithType: NSTicketMessageEntity.GetHtmlBody()
   fullName: CRMScript.NetServer.NSTicketMessageEntity.GetHtmlBody()
   type: Method
-  summary: "\nThe html body for the message (if any).\n"
+  summary: "\nThe HTML body for the message (if any).\n"
   remarks: 
   syntax: 
     content: String GetHtmlBody()
@@ -671,7 +671,7 @@ items:
   nameWithType: NSTicketMessageEntity.SetHtmlBody(String)
   fullName: CRMScript.NetServer.NSTicketMessageEntity.SetHtmlBody(String)
   type: Method
-  summary: "\nThe html body for the message (if any).\n"
+  summary: "\nThe HTML body for the message (if any).\n"
   remarks: 
   syntax: 
     content: Void SetHtmlBody(String htmlBody)
