--- a/docs/api-reference/CRMScript.NetServer.NSQuickReply.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuickReply.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSQuickReply.#ctor
   - CRMScript.NetServer.NSQuickReply.GetHtmlBody()
   - CRMScript.NetServer.NSQuickReply.GetName()
   - CRMScript.NetServer.NSQuickReply.GetQuickReplyId()
-  - CRMScript.NetServer.NSQuickReply.#ctor
   - CRMScript.NetServer.NSQuickReply.SetHtmlBody(String)
   - CRMScript.NetServer.NSQuickReply.SetName(String)
   - CRMScript.NetServer.NSQuickReply.SetQuickReplyId(Integer)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSQuickReply.GetHtmlBody()
-  commentId: M:CRMScript.NetServer.NSQuickReply.GetHtmlBody()
-  id: 'GetHtmlBody()'
-  so.intellisense: NSQuickReply.GetHtmlBody
-  langs:
-  - crmscript
-  name: 'GetHtmlBody()'
-  nameWithType: NSQuickReply.GetHtmlBody()
-  fullName: CRMScript.NetServer.NSQuickReply.GetHtmlBody()
-  type: Method
-  summary: "\nThe html body of the quick reply\n"
-  remarks: 
-  syntax: 
-    content: String GetHtmlBody()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuickReply thing;\nString htmlBody = thing.GetHtmlBody();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuickReply.GetName()
-  commentId: M:CRMScript.NetServer.NSQuickReply.GetName()
-  id: 'GetName()'
-  so.intellisense: NSQuickReply.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSQuickReply.GetName()
-  fullName: CRMScript.NetServer.NSQuickReply.GetName()
-  type: Method
-  summary: "\nThe short name of the quick reply\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuickReply thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuickReply.GetQuickReplyId()
-  commentId: M:CRMScript.NetServer.NSQuickReply.GetQuickReplyId()
-  id: 'GetQuickReplyId()'
-  so.intellisense: NSQuickReply.GetQuickReplyId
-  langs:
-  - crmscript
-  name: 'GetQuickReplyId()'
-  nameWithType: NSQuickReply.GetQuickReplyId()
-  fullName: CRMScript.NetServer.NSQuickReply.GetQuickReplyId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetQuickReplyId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSQuickReply thing;\nInteger quickReplyId = thing.GetQuickReplyId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuickReply.#ctor
   commentId: M:CRMScript.NetServer.NSQuickReply.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSQuickReply
   example: 
+- uid: CRMScript.NetServer.NSQuickReply.GetHtmlBody()
+  commentId: M:CRMScript.NetServer.NSQuickReply.GetHtmlBody()
+  id: 'GetHtmlBody()'
+  so.intellisense: NSQuickReply.GetHtmlBody
+  langs:
+  - crmscript
+  name: 'GetHtmlBody()'
+  nameWithType: NSQuickReply.GetHtmlBody()
+  fullName: CRMScript.NetServer.NSQuickReply.GetHtmlBody()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetHtmlBody()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The HTML body of the quick reply
+  example: 
+  - "\n<pre><code>NSQuickReply thing;\nString htmlBody = thing.GetHtmlBody();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuickReply.GetName()
+  commentId: M:CRMScript.NetServer.NSQuickReply.GetName()
+  id: 'GetName()'
+  so.intellisense: NSQuickReply.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSQuickReply.GetName()
+  fullName: CRMScript.NetServer.NSQuickReply.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The short name of the quick reply
+  example: 
+  - "\n<pre><code>NSQuickReply thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuickReply.GetQuickReplyId()
+  commentId: M:CRMScript.NetServer.NSQuickReply.GetQuickReplyId()
+  id: 'GetQuickReplyId()'
+  so.intellisense: NSQuickReply.GetQuickReplyId
+  langs:
+  - crmscript
+  name: 'GetQuickReplyId()'
+  nameWithType: NSQuickReply.GetQuickReplyId()
+  fullName: CRMScript.NetServer.NSQuickReply.GetQuickReplyId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetQuickReplyId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSQuickReply thing;\nInteger quickReplyId = thing.GetQuickReplyId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuickReply.SetHtmlBody(String)
   commentId: M:CRMScript.NetServer.NSQuickReply.SetHtmlBody(String)
   id: 'SetHtmlBody(String)'
@@ -104,14 +104,14 @@ items:
   nameWithType: NSQuickReply.SetHtmlBody(String)
   fullName: CRMScript.NetServer.NSQuickReply.SetHtmlBody(String)
   type: Method
-  summary: "\nThe html body of the quick reply\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetHtmlBody(String htmlBody)
     parameters:
     - id: htmlBody
       type: CRMScript.Global.String
-      description: 
+      description: The HTML body of the quick reply
     return:
       type: CRMScript.Global.Void
   example: 
@@ -126,14 +126,14 @@ items:
   nameWithType: NSQuickReply.SetName(String)
   fullName: CRMScript.NetServer.NSQuickReply.SetName(String)
   type: Method
-  summary: "\nThe short name of the quick reply\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The short name of the quick reply
     return:
       type: CRMScript.Global.Void
   example: 
@@ -148,14 +148,14 @@ items:
   nameWithType: NSQuickReply.SetQuickReplyId(Integer)
   fullName: CRMScript.NetServer.NSQuickReply.SetQuickReplyId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetQuickReplyId(Integer quickReplyId)
     parameters:
     - id: quickReplyId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
