--- a/docs/api-reference/CRMScript.NetServer.NSQuoteVersionButtonState.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteVersionButtonState.yml
@@ -6,12 +6,12 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSQuoteVersionButtonState.#ctor
   - CRMScript.NetServer.NSQuoteVersionButtonState.GetAction()
   - CRMScript.NetServer.NSQuoteVersionButtonState.GetDisplayText()
   - CRMScript.NetServer.NSQuoteVersionButtonState.GetEnabled()
   - CRMScript.NetServer.NSQuoteVersionButtonState.GetImageHint()
   - CRMScript.NetServer.NSQuoteVersionButtonState.GetTooltipText()
-  - CRMScript.NetServer.NSQuoteVersionButtonState.#ctor
   - CRMScript.NetServer.NSQuoteVersionButtonState.SetAction(Integer)
   - CRMScript.NetServer.NSQuoteVersionButtonState.SetDisplayText(String)
   - CRMScript.NetServer.NSQuoteVersionButtonState.SetEnabled(Bool)
@@ -23,106 +23,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSQuoteVersionButtonState.GetAction()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionButtonState.GetAction()
-  id: 'GetAction()'
-  so.intellisense: NSQuoteVersionButtonState.GetAction
-  langs:
-  - crmscript
-  name: 'GetAction()'
-  nameWithType: NSQuoteVersionButtonState.GetAction()
-  fullName: CRMScript.NetServer.NSQuoteVersionButtonState.GetAction()
-  type: Method
-  summary: "\nAction for the button<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = ValidateVersion</li><li>Enum: 2 = Edit</li><li>Enum: 3 = Send</li><li>Enum: 4 = Approve</li><li>Enum: 5 = Reject</li><li>Enum: 7 = ValidateVersionAndSendIfPossible</li><li>Enum: 8 = ValidateVersionAndPlaceOrderIfPossible</li><li>Enum: 9 = CloneVersion</li><li>Enum: 10 = SendConfirmation</li><li>Enum: 11 = GetOrderState</li><li>Enum: 12 = UpdatePrices</li></ul><pre><code>NSQuoteVersionButtonState thing;\nInteger action = thing.GetAction();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetAction()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteVersionButtonState thing;\nInteger action = thing.GetAction();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionButtonState.GetDisplayText()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionButtonState.GetDisplayText()
-  id: 'GetDisplayText()'
-  so.intellisense: NSQuoteVersionButtonState.GetDisplayText
-  langs:
-  - crmscript
-  name: 'GetDisplayText()'
-  nameWithType: NSQuoteVersionButtonState.GetDisplayText()
-  fullName: CRMScript.NetServer.NSQuoteVersionButtonState.GetDisplayText()
-  type: Method
-  summary: "\nText to be displayed on the button\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayText()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteVersionButtonState thing;\nString displayText = thing.GetDisplayText();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionButtonState.GetEnabled()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionButtonState.GetEnabled()
-  id: 'GetEnabled()'
-  so.intellisense: NSQuoteVersionButtonState.GetEnabled
-  langs:
-  - crmscript
-  name: 'GetEnabled()'
-  nameWithType: NSQuoteVersionButtonState.GetEnabled()
-  fullName: CRMScript.NetServer.NSQuoteVersionButtonState.GetEnabled()
-  type: Method
-  summary: "\nIndicate if the button should be enabled or disabled\n"
-  remarks: 
-  syntax: 
-    content: Bool GetEnabled()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteVersionButtonState thing;\nBool enabled = thing.GetEnabled();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionButtonState.GetImageHint()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionButtonState.GetImageHint()
-  id: 'GetImageHint()'
-  so.intellisense: NSQuoteVersionButtonState.GetImageHint
-  langs:
-  - crmscript
-  name: 'GetImageHint()'
-  nameWithType: NSQuoteVersionButtonState.GetImageHint()
-  fullName: CRMScript.NetServer.NSQuoteVersionButtonState.GetImageHint()
-  type: Method
-  summary: "\nImage to be shown\n"
-  remarks: 
-  syntax: 
-    content: String GetImageHint()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteVersionButtonState thing;\nString imageHint = thing.GetImageHint();</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteVersionButtonState.GetTooltipText()
-  commentId: M:CRMScript.NetServer.NSQuoteVersionButtonState.GetTooltipText()
-  id: 'GetTooltipText()'
-  so.intellisense: NSQuoteVersionButtonState.GetTooltipText
-  langs:
-  - crmscript
-  name: 'GetTooltipText()'
-  nameWithType: NSQuoteVersionButtonState.GetTooltipText()
-  fullName: CRMScript.NetServer.NSQuoteVersionButtonState.GetTooltipText()
-  type: Method
-  summary: "\nThe tooltip for the button\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltipText()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSQuoteVersionButtonState thing;\nString tooltipText = thing.GetTooltipText();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersionButtonState.#ctor
   commentId: M:CRMScript.NetServer.NSQuoteVersionButtonState.#ctor
   id: '#ctor'
@@ -138,6 +38,106 @@ items:
   syntax: 
     content: NSQuoteVersionButtonState
   example: 
+- uid: CRMScript.NetServer.NSQuoteVersionButtonState.GetAction()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionButtonState.GetAction()
+  id: 'GetAction()'
+  so.intellisense: NSQuoteVersionButtonState.GetAction
+  langs:
+  - crmscript
+  name: 'GetAction()'
+  nameWithType: NSQuoteVersionButtonState.GetAction()
+  fullName: CRMScript.NetServer.NSQuoteVersionButtonState.GetAction()
+  type: Method
+  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = ValidateVersion</li><li>Enum: 2 = Edit</li><li>Enum: 3 = Send</li><li>Enum: 4 = Approve</li><li>Enum: 5 = Reject</li><li>Enum: 7 = ValidateVersionAndSendIfPossible</li><li>Enum: 8 = ValidateVersionAndPlaceOrderIfPossible</li><li>Enum: 9 = CloneVersion</li><li>Enum: 10 = SendConfirmation</li><li>Enum: 11 = GetOrderState</li><li>Enum: 12 = UpdatePrices</li></ul>\n"
+  remarks: 
+  syntax: 
+    content: Integer GetAction()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Action for the button
+  example: 
+  - "\n<pre><code>NSQuoteVersionButtonState thing;\nInteger action = thing.GetAction();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteVersionButtonState.GetDisplayText()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionButtonState.GetDisplayText()
+  id: 'GetDisplayText()'
+  so.intellisense: NSQuoteVersionButtonState.GetDisplayText
+  langs:
+  - crmscript
+  name: 'GetDisplayText()'
+  nameWithType: NSQuoteVersionButtonState.GetDisplayText()
+  fullName: CRMScript.NetServer.NSQuoteVersionButtonState.GetDisplayText()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDisplayText()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Text to be displayed on the button
+  example: 
+  - "\n<pre><code>NSQuoteVersionButtonState thing;\nString displayText = thing.GetDisplayText();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteVersionButtonState.GetEnabled()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionButtonState.GetEnabled()
+  id: 'GetEnabled()'
+  so.intellisense: NSQuoteVersionButtonState.GetEnabled
+  langs:
+  - crmscript
+  name: 'GetEnabled()'
+  nameWithType: NSQuoteVersionButtonState.GetEnabled()
+  fullName: CRMScript.NetServer.NSQuoteVersionButtonState.GetEnabled()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetEnabled()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Indicate if the button should be enabled or disabled
+  example: 
+  - "\n<pre><code>NSQuoteVersionButtonState thing;\nBool enabled = thing.GetEnabled();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteVersionButtonState.GetImageHint()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionButtonState.GetImageHint()
+  id: 'GetImageHint()'
+  so.intellisense: NSQuoteVersionButtonState.GetImageHint
+  langs:
+  - crmscript
+  name: 'GetImageHint()'
+  nameWithType: NSQuoteVersionButtonState.GetImageHint()
+  fullName: CRMScript.NetServer.NSQuoteVersionButtonState.GetImageHint()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetImageHint()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Image to be shown
+  example: 
+  - "\n<pre><code>NSQuoteVersionButtonState thing;\nString imageHint = thing.GetImageHint();</code></pre>\n"
+- uid: CRMScript.NetServer.NSQuoteVersionButtonState.GetTooltipText()
+  commentId: M:CRMScript.NetServer.NSQuoteVersionButtonState.GetTooltipText()
+  id: 'GetTooltipText()'
+  so.intellisense: NSQuoteVersionButtonState.GetTooltipText
+  langs:
+  - crmscript
+  name: 'GetTooltipText()'
+  nameWithType: NSQuoteVersionButtonState.GetTooltipText()
+  fullName: CRMScript.NetServer.NSQuoteVersionButtonState.GetTooltipText()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetTooltipText()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The tooltip for the button
+  example: 
+  - "\n<pre><code>NSQuoteVersionButtonState thing;\nString tooltipText = thing.GetTooltipText();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersionButtonState.SetAction(Integer)
   commentId: M:CRMScript.NetServer.NSQuoteVersionButtonState.SetAction(Integer)
   id: 'SetAction(Integer)'
@@ -148,14 +148,14 @@ items:
   nameWithType: NSQuoteVersionButtonState.SetAction(Integer)
   fullName: CRMScript.NetServer.NSQuoteVersionButtonState.SetAction(Integer)
   type: Method
-  summary: "\nAction for the button\n"
-  remarks: "\n<p>See enum action.</p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetAction(Integer action)
     parameters:
     - id: action
       type: CRMScript.Global.Integer
-      description: 
+      description:  Action for the button See enum action.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -170,14 +170,14 @@ items:
   nameWithType: NSQuoteVersionButtonState.SetDisplayText(String)
   fullName: CRMScript.NetServer.NSQuoteVersionButtonState.SetDisplayText(String)
   type: Method
-  summary: "\nText to be displayed on the button\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDisplayText(String displayText)
     parameters:
     - id: displayText
       type: CRMScript.Global.String
-      description: 
+      description: Text to be displayed on the button
     return:
       type: CRMScript.Global.Void
   example: 
@@ -192,14 +192,14 @@ items:
   nameWithType: NSQuoteVersionButtonState.SetEnabled(Bool)
   fullName: CRMScript.NetServer.NSQuoteVersionButtonState.SetEnabled(Bool)
   type: Method
-  summary: "\nIndicate if the button should be enabled or disabled\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetEnabled(Bool enabled)
     parameters:
     - id: enabled
       type: CRMScript.Global.Bool
-      description: 
+      description:  Indicate if the button should be enabled or disabled
     return:
       type: CRMScript.Global.Void
   example: 
@@ -214,14 +214,14 @@ items:
   nameWithType: NSQuoteVersionButtonState.SetImageHint(String)
   fullName: CRMScript.NetServer.NSQuoteVersionButtonState.SetImageHint(String)
   type: Method
-  summary: "\nImage to be shown\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetImageHint(String imageHint)
     parameters:
     - id: imageHint
       type: CRMScript.Global.String
-      description: 
+      description:  Image to be shown
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,14 +236,14 @@ items:
   nameWithType: NSQuoteVersionButtonState.SetTooltipText(String)
   fullName: CRMScript.NetServer.NSQuoteVersionButtonState.SetTooltipText(String)
   type: Method
-  summary: "\nThe tooltip for the button\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTooltipText(String tooltipText)
     parameters:
     - id: tooltipText
       type: CRMScript.Global.String
-      description: 
+      description: The tooltip for the button
     return:
       type: CRMScript.Global.Void
   example: 
